--- a/D02 - Card de Produto/index.html
+++ b/D02 - Card de Produto/index.html
@@ -22,7 +22,7 @@
             <div class="product_image">
                 <img id="productImage" src="./assets/img/sofa_boraCodar.png" alt="">
                 <button id="view360" onclick="ChangeImage()">
-                    <img src="./assets/icons/view360.svg" alt="">
+                    <img id="view360Icon" src="./assets/icons/view360.svg" alt="">
                 </button>
             </div>
             <div class="product_info">
